deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meal4cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal4cast
  template:
    metadata:
      labels:
        app: meal4cast
    spec:
      containers:
        - name: meal4cast
          image: fbedecarrats/meal4cast:latest
          ports:
          - containerPort: 80
