deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meal4cast
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: meal4cast
