deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meal4cast
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - meal4cast.lab.sspcloud.fr
  rules:
    - host: meal4cast.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meal4cast
                port:
                  number: 80
